<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/QuizTitle"
        android:textColor="@android:color/black"
        android:textSize="35sp" />

    <EditText
        android:id="@+id/etUser"
        android:hint="@string/User"
        android:inputType="text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="@string/User"
        android:textSize="32sp"
        android:textColor="@android:color/black"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/btnStart"/>

    <TextView
        android:id="@+id/tvTopScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnTopScore"
        android:layout_below="@id/btnStart"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:layout_marginTop="32dp"/>

    <Button
        android:id="@+id/btnStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnStart"
        android:layout_centerInParent="true"/>

</RelativeLayout>